[workspace]
memeber = ["proc"]

[package]
name = "blueprint"
version = "0.0.0"
edition = "2018"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/blueprint"
homepage = "https://github.com/zakarumych/blueprint"
repository = "https://github.com/zakarumych/blueprint"
readme = "README.md"

[features]
alloc = []
derive = ["blueprint-proc"]
default = ["alloc"]

[dependencies]
blueprint-proc = { version = "0.0.0", path = "proc", optional = true }
regex = { version = "1.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
